security/security-server-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: default
  name: security-server-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: security-server-deployment
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: security-server
        image: ecoreg.azurecr.io/security-server:1.0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
