security/security-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: security-server-service
  labels:
    app: content-service
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: security-server-deployment
  type: NodePort
