security/security-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: security-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-redirect-from: /
    nginx.ingress.kubernetes.io/proxy-redirect-to: /security/
spec:
  tls:
  - hosts:
    - eco-n-v4.contentservice.net
    - eco-n.contentservice.net
    secretName: cs-tls-secret-digicert
  rules:
  - host: eco-n-v4.contentservice.net
    http:
      paths:
      - path: /security
        backend:
          serviceName: security-server-service
          servicePort: 80
  - host: eco-n.contentservice.net
    http:
      paths:
      - path: /security
        backend:
          serviceName: security-server-service
          servicePort: 80
